NOJIRA: Adding a custom panel to the schema version of the full-page-with-preview demo

--- a/src/tests/manual-tests/html/FullPreviewUIOptions.html
+++ b/src/tests/manual-tests/html/FullPreviewUIOptions.html
@@ -4,6 +4,9 @@
         <h2 class="fl-uiOptions-links-icon">Custom Panels</h2>
         <div class="flc-uiOptions-playfulness fl-uiOptions-category"></div>
 
+        <h2 class="fl-uiOptions-links-icon">Extra Panels</h2>
+        <div class="democ-testPref-panel fl-uiOptions-category"></div>
+
         <h2 class="fl-uiOptions-text-icon">Text and display</h2>
         <div class="flc-uiOptions-text-size fl-uiOptions-category fl-uiOptions-text"></div>
         <div class="flc-uiOptions-text-font fl-uiOptions-category fl-uiOptions-text"></div>
