--- a/src/tests/manual-tests/html/FullPreviewUIOptions.html
+++ b/src/tests/manual-tests/html/FullPreviewUIOptions.html
@@ -1,11 +1,8 @@
 <form id="options" action="" class="fl-uiOptions fl-uiOptions-fullPreview fl-focus">
     <div class="fl-container-flex60 fl-force-left">
 
-        <h2 class="fl-uiOptions-links-icon">Custom Panels</h2>
-        <div class="flc-uiOptions-playfulness fl-uiOptions-category"></div>
-
-        <h2 class="fl-uiOptions-links-icon">Extra Panels</h2>
-        <div class="democ-testPref-panel fl-uiOptions-category"></div>
+        <h2 class="fl-uiOptions-links-icon">Extra Panel</h2>
+        <div class="democ-extraTextSize-panel fl-uiOptions-category"></div>
 
         <h2 class="fl-uiOptions-text-icon">Text and display</h2>
         <div class="flc-uiOptions-text-size fl-uiOptions-category fl-uiOptions-text"></div>
