Fix up radio buttons to better identify two separate groups.

--- a/src/instructionalDemos/framework/preferences/compositeSchemas/html/composite2.html
+++ b/src/instructionalDemos/framework/preferences/compositeSchemas/html/composite2.html
@@ -1,7 +1,10 @@
+<style>
+    .demo-radio-set {display: inline-block;}
+</style>
 <h2><span class="fl-icon-links"></span><span class="flc-prefsEditor-composite2-label heading-text"></span></h2>
 <ul class="fl-inputs fl-composite2-options">
     <li class="flc-prefsEditor-composite2-dropdownTest1"></li>
     <li class="flc-prefsEditor-composite2-dropdownTest2"></li>
-    <li class="flc-prefsEditor-composite2-radioTest1"></li>
-    <li class="flc-prefsEditor-composite2-radioTest2"></li>
+    <li class="flc-prefsEditor-composite2-radioTest1 demo-radio-set"></li>
+    <li class="flc-prefsEditor-composite2-radioTest2 demo-radio-set"></li>
 </ul>
