In-progress commit.

--- a/src/instructionalDemos/framework/preferences/compositeSchemas/html/compositePrefsEditor.html
+++ b/src/instructionalDemos/framework/preferences/compositeSchemas/html/compositePrefsEditor.html
@@ -3,6 +3,7 @@
         <ul class="fl-prefsEditor-panels">     
             <li class="fl-prefsEditor-panel"><div class="flc-prefsEditor-compositePanel1"></div></li> 
             <li class="fl-prefsEditor-panel"><div class="flc-prefsEditor-compositePanel2"></div></li> 
+            <li class="fl-prefsEditor-panel"><div class="flc-prefsEditor-compositePanel3"></div></li> 
         </ul>
     </div>
 </form>
