Remove composite panel with multi-control subpanels: not supported.

--- a/src/instructionalDemos/framework/preferences/compositeSchemas/html/composite1.html
+++ b/src/instructionalDemos/framework/preferences/compositeSchemas/html/composite1.html
@@ -2,6 +2,7 @@
 <ul class="fl-inputs fl-composite1-options">
     <li class="flc-prefsEditor-composite1-boolean1"></li>
     <li class="flc-prefsEditor-composite1-boolean2"></li>
+    <li class="flc-prefsEditor-composite1-check1"></li>
     <li class="flc-prefsEditor-composite1-slider1"></li>
     <li class="flc-prefsEditor-composite1-slider2"></li>
 </ul>
