Add start of code testing the show/hide conditional functionality.

--- a/src/instructionalDemos/framework/preferences/compositeSchemas/html/composite1.html
+++ b/src/instructionalDemos/framework/preferences/compositeSchemas/html/composite1.html
@@ -1,5 +1,5 @@
 <h2><span class="fl-icon-links"></span><span class="flc-prefsEditor-composite1-label heading-text"></span></h2>
-<ul class="fl-inputs fl-composite1-options">
+<ul class="fl-inputs">
     <li class="flc-prefsEditor-composite1-boolean1"></li>
     <li class="flc-prefsEditor-composite1-boolean2"></li>
     <li class="flc-prefsEditor-composite1-check1"></li>
