--- a/src/instructionalDemos/framework/preferences/compositeSchemas/html/conditionalPrefsEditor.html
+++ b/src/instructionalDemos/framework/preferences/compositeSchemas/html/conditionalPrefsEditor.html
@@ -3,6 +3,7 @@
         <ul class="fl-prefsEditor-panels">     
             <li class="fl-prefsEditor-panel"><div class="mpe-speaking"></div></li> 
             <li class="fl-prefsEditor-panel"><div class="mpe-increasing"></div></li> 
+            <li class="fl-prefsEditor-panel"><div class="mpe-speakIncrease"></div></li> 
         </ul>
     </div>
 </form>
