FLUID-5216: Fix to styling of radio buttons

--- a/src/instructionalDemos/framework/preferences/shared/html/speakIncrease.html
+++ b/src/instructionalDemos/framework/preferences/shared/html/speakIncrease.html
@@ -7,7 +7,7 @@
     </ul>
     <ul class="fl-inputs">
         <li class="mpe-increasing-onOff"></li>
-        <li class="mpe-increasing-magPos"></li>
+        <li class="mpe-increasing-magPos float-right"></li>
         <li class="mpe-increasing-cursor"></li>
         <li class="mpe-increasing-magFactor"></li>
     </ul>
