--- a/examples/framework/preferences/minimalEditor/html/minEditor.html
+++ b/examples/framework/preferences/minimalEditor/html/minEditor.html
@@ -4,5 +4,6 @@
 
 <!-- placeholder for the auto-pilot preference panel -->
 <div class="mec-autoPilot"></div>
+<div class="mec-radioVolume"></div>
 
 <button class="flc-prefsEditor-save me-save">save</button>
