FLUID-5754: Starting to add composite panel example

--- a/examples/framework/preferences/minimalEditor/html/minEditor.html
+++ b/examples/framework/preferences/minimalEditor/html/minEditor.html
@@ -5,5 +5,6 @@
 <!-- placeholder for the auto-pilot preference panel -->
 <div class="mec-autoPilot"></div>
 <div class="mec-radioVolume"></div>
+<div class="mec-xy"></div>
 
 <button class="flc-prefsEditor-save me-save">save</button>
