FLUID-5754: Fix to selectors in composite panel example

--- a/examples/framework/preferences/minimalEditor/html/xy.html
+++ b/examples/framework/preferences/minimalEditor/html/xy.html
@@ -1,7 +1,7 @@
 <section class="me-panel">
     <h2>XY</h2>
-    <div class="mec-x"></div>
-    <div class="mec-y"></div>
+    <div class="mec-xx"></div>
+    <div class="mec-yy"></div>
 
 </section>
 
