--- a/examples/framework/preferences/minimalEditor/html/minEditor.html
+++ b/examples/framework/preferences/minimalEditor/html/minEditor.html
@@ -6,5 +6,6 @@
 <div class="mec-autoPilot"></div>
 <div class="mec-radioVolume"></div>
 <div class="mec-xy"></div>
+<div class="mec-mn"></div>
 
 <button class="flc-prefsEditor-save me-save">save</button>
