FLUID-5754+: Localize two panels

--- a/examples/framework/preferences/minimalEditor/html/radioVolume.html
+++ b/examples/framework/preferences/minimalEditor/html/radioVolume.html
@@ -1,8 +1,8 @@
 <!-- This file is the template for the radio volume preference panel -->
 <section class="me-panel">
-    <h2>Radio Volume</h2>
+    <h2 class="mec-radioVolume-header">header</h2>
 
-    <label for="minEditor-radioVolume">Set the desired volume for the radio</label>
+    <label for="minEditor-radioVolume" class="mec-radioVolume-label">label</label>
     <input type="range" id="minEditor-radioVolume" class="mec-radioVolume"/>
 </section>
 
