--- a/examples/framework/preferences/minimalEditor/html/autoPilot.html
+++ b/examples/framework/preferences/minimalEditor/html/autoPilot.html
@@ -1,8 +1,8 @@
 <!-- This file is the template for the auto-pilot preference panel -->
 <section class="me-panel">
-    <h2>Auto-Pilot</h2>
+    <h2 class="mec-autoPilot-header">header</h2>
 
-    <label for="minEditor-autoPilot">Enable the auto-pilot when the car starts</label>
+    <label for="minEditor-autoPilot" class="mec-autoPilot-label">label</label>
     <input type="checkbox" id="minEditor-autoPilot" class="mec-autoPilot"/>
 </section>
 
