FLUID-5754: Convert temporary composite panel text to climate controls

--- a/examples/framework/preferences/minimalEditor/html/minEditor.html
+++ b/examples/framework/preferences/minimalEditor/html/minEditor.html
@@ -4,7 +4,7 @@
 <!-- placeholder for the auto-pilot preference panel -->
 <div class="mec-autoPilot"></div>
 <div class="mec-radioVolume"></div>
-<div class="mec-xy"></div>
+<div class="mec-climate"></div>
 <div class="mec-mn"></div>
 
 <button class="flc-prefsEditor-save me-save">save</button>
