FLUID-5754+: Change auto-pilot to heated seats.

--- a/examples/framework/preferences/minimalEditor/html/minEditor.html
+++ b/examples/framework/preferences/minimalEditor/html/minEditor.html
@@ -1,8 +1,8 @@
 <!-- This file is the template for the entire Preference Editor -->
 <h1>Flying Car Setup</h1>
 
-<!-- placeholder for the auto-pilot preference panel -->
-<div class="mec-autoPilot"></div>
+<!-- placeholder for the heated seats preference panel -->
+<div class="mec-heatedSeats"></div>
 <div class="mec-radioVolume"></div>
 <div class="mec-climate"></div>
 <div class="mec-mn"></div>
